--- a/EmailVerification/css/verifyEmail.css
+++ b/EmailVerification/css/verifyEmail.css
@@ -1,78 +1,78 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    font-family: Arial, sans-serif;
-    /* background-color: #bdbbbb; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  /* label {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* body {
+  font-family: Arial, sans-serif;
+
+  min-height: 60vh;
+} */
+/* label {
       display: block;
       margin-bottom: 5px;
     } */
+
+ .main {
+  display: flex;
+  margin: auto;
+min-height: 96vh;
+  padding: 50px;
+  border-radius: 10px; }
   
-  .contact-container {
-    margin: auto;
-    width: 1280px;
-    padding: 50px;
-    border-radius: 10px;
-    /* box-shadow: 0 0 10px rgba(187, 138, 138, 0.1); */
-    max-width: 500px;
-  }
-  .login {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* gap: 20px; */
-  }
-  .logo {
-    /* position: absolute;
-      left: 10px; */
-  }
-  .img-logo {
-    width: 60px;
-    border-radius: 50%;
-  }
+
+.login {
   
-  .color {
-    color: rgb(78, 79, 78);
-  }
-  .btn {
-    background-color: #0a1c0e;
-    color: #fff;
-    border: none;
-    padding: 10px 15px;
-    border-radius: 4px;
-    cursor: pointer;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.img-logo {
+  width: 70px;
+  border-radius: 50%;
+}
+
+.color {
+  color: rgb(78, 79, 78);
+}
+.btn {
+  background-color: #614eed;
+  color: #fff;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #073474;
+  color: white;
+}
+
+.form {
+  border: 1px solid black;
+  padding: 25px;
+  border-radius: 15px;
+
+}
+#msg{
+  border-radius: 15px;
+  padding: 15px;
+}
+
+.form input {
+  font-family: sans-serif;
+  margin-top: 30px;
+  font-size: 15px;
+  border: 1px solid rgb(69, 66, 60);
   
-  .btn:hover {
-    background-color: #087527;
-  }
-  
-  .form {
-    border: 1px solid black;
-    padding: 25px;
-    border-radius: 15px;
-  }
-  
-  .form input {
-    font-family: sans-serif;
-    margin-top: 30px;
-    font-size: 15px;
-    border: 1px solid rgb(69, 66, 60);
-    /* border-top: none;
-      border-right: none;
-      border-left: none; */
-    border-radius: 10px;
-  }
-  
+  border-radius: 10px;
+}
+
+textarea:invalid {
+  box-shadow: 0 0 5px 1px red;
+}
