--- a/Registrationpage/css/registration.css
+++ b/Registrationpage/css/registration.css
@@ -4,39 +4,33 @@
   box-sizing: border-box;
 }
 
-body {
+/* body {
   font-family: Arial, sans-serif;
-  /* background-color: #bdbbbb; */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
+
+  min-height: 60vh;
+} */
 /* label {
       display: block;
       margin-bottom: 5px;
     } */
 
-.contact-container {
+ .main {
+  display: flex;
   margin: auto;
-  width: 1280px;
+min-height: 96vh;
   padding: 50px;
-  border-radius: 10px;
-  /* box-shadow: 0 0 10px rgba(187, 138, 138, 0.1); */
-  max-width: 500px;
-}
+  border-radius: 10px; }
+  
+
 .login {
-  /* position: relative; */
+  
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-/* .logo {
-  position: absolute;
-  left: 10px;
-} */
+
 .img-logo {
-  width: 60px;
+  width: 70px;
   border-radius: 50%;
 }
 
@@ -61,7 +55,11 @@ body {
   border: 1px solid black;
   padding: 25px;
   border-radius: 15px;
-  position: relative;
+
+}
+#msg{
+  border-radius: 15px;
+  padding: 15px;
 }
 
 .form input {
@@ -69,9 +67,7 @@ body {
   margin-top: 30px;
   font-size: 15px;
   border: 1px solid rgb(69, 66, 60);
-  /* border-top: none;
-      border-right: none;
-      border-left: none; */
+  
   border-radius: 10px;
 }
 
